<resources>
    <string name="app_name">LaborCash</string>
    <string name="facebook_app_id">1727855824183716</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="expand_string">mostrar mais...</string>
    <string name="collapsed_string">hide</string>
    <string name="mapbox_access_token">pk.eyJ1IjoibWFsZXJjbyIsImEiOiJjajYyaGpiaHYxNHFzMzJsZzFtY3FtOHM0In0.HKpPIH7Vnp9D5sfTDdtGtA</string>
    <string name="toolbar_title_explore">Explore</string>
    <string name="other_activity">Outra Atividade</string>
    <string name="sendPhoto">Foto</string>
    <string name="sign_out">Sair</string>
    <string name="select_picture_title">Selecionar Foto de</string>
    <string name="sendPhotoGallery">Galeria de Fotos</string>
    <string name="sendLocation">Enviar Localização</string>
    <string name="send_video">Enviar Video</string>
    <string name="send_audio">Enviar Audio</string>
    <string name="panel">PAINEL DE CONTROLE</string>
    <string name="profile">PERFIL</string>
    <string name="profilefree">COMO FREELANCER</string>
    <string name="profileclient">COMO EMPREGADOR</string>
    <string name="notification">CAIXA DE ENTRADA</string>
    <string name="messages">MENSAGEM</string>
    <string name="newproj">CRIAR UM PROJETO</string>
    <string name="search">PESQUISA de PROJETOS</string>
    <string name="searchFree">PESQUISA de FREELANCERS</string>
    <string name="myproj">MEUS PROJETOS</string>
    <string name="myprojfree">COMO FREELANCER</string>
    <string name="myprojclient">COMO EMPREGADOR</string>
    <string name="configure">CONFIGURAÇÃO</string>
    <string name="notselected">não selecionado</string>
    <string-array name="design">
        <item>2D Animation </item>
        <item>360-degree video </item>
        <item>3D Animation</item>
        <item>3D Design</item>
        <item>3D Model Maker</item>
        <item>3D Modelling</item>
        <item>3D Rendering</item>
        <item>3ds Max</item>
        <item>ActionScript</item>
        <item>Adobe Dreamweaver</item>
        <item>Adobe Fireworks</item>
        <item>Adobe Flash</item>
        <item>Adobe InDesign</item>
        <item>Adobe Lightroom</item>
        <item>Adobe LiveCycle Designer</item>
        <item>Advertisement Design</item>
        <item>After Effects</item>
        <item>Animation</item>
        <item>App Designer</item>
        <item>Apple Compressor</item>
        <item>Apple Logic Pro</item>
        <item>Apple Motion</item>
        <item>Arts &amp; Crafts</item>
        <item>Audio Production</item>
        <item>Audio Services</item>
        <item>Autodesk Inventor</item>
        <item>Autodesk Revit</item>
        <item>Autodesk Sketchbook Pro</item>
        <item>Axure</item>
        <item>Banner Design</item>
        <item>Blog Design </item>
        <item>Book Artist</item>
        <item>Bootstrap</item>
        <item>Brochure Design</item>
        <item>Building Architecture</item>
        <item>Business Card Design</item>
        <item>Business Cards</item>
        <item>Capture NX2</item>
        <item>Caricature &amp; Cartoons</item>
        <item>CGI</item>
        <item>Cinema 4D</item>
        <item>Commercials</item>
        <item>Concept Art</item>
        <item>Concept Design</item>
        <item>Corel Painter</item>
        <item>Corporate Identity</item>
        <item>Covers &amp; Packaging</item>
        <item>Creative Design</item>
        <item>CSS</item>
        <item>Design</item>
        <item>eLearning Designer</item>
        <item>Fashion Design</item>
        <item>Fashion Modeling</item>
        <item>Filmmaking</item>
        <item>Final Cut Pro</item>
        <item>Finale / Sibelius</item>
        <item>Flash 3D</item>
        <item>Flash Animation</item>
        <item>Flex</item>
        <item>Flow Charts</item>
        <item>Flyer Design</item>
        <item>Format &amp; Layout</item>
        <item>Furniture Design</item>
        <item>GarageBand</item>
        <item>Google SketchUp</item>
        <item>Graphic Design</item>
        <item>Icon Design</item>
        <item>Illustration</item>
        <item>Illustrator</item>
        <item>Image Processing</item>
        <item>iMovie</item>
        <item>Industrial Design</item>
        <item>Infographics</item>
        <item>Instagram Marketing</item>
        <item>Interior Design</item>
        <item>Invitation Design</item>
        <item>JDF</item>
        <item>Kinetic Typography</item>
        <item>Label Design</item>
        <item>Landing Pages</item>
        <item>Logo Design</item>
        <item>Makerbot</item>
        <item>Maya</item>
        <item>Motion Graphics</item>
        <item>Music</item>
        <item>Package Design</item>
        <item>Photo Editing</item>
        <item>Photo Restoration</item>
        <item>Photo Retouching</item>
        <item>Photography</item>
        <item>Photoshop</item>
        <item>Photoshop Design</item>
        <item>Post-Production</item>
        <item>Poster Design</item>
        <item>Pre-production</item>
        <item>Presentations</item>
        <item>Prezi</item>
        <item>Print</item>
        <item>PSD to HTML</item>
        <item>PSD2CMS</item>
        <item>QuarkXPress</item>
        <item>RWD</item>
        <item>Shopify Templates</item>
        <item>Sign Design</item>
        <item>Sound Design</item>
        <item>Stationery Design</item>
        <item>Sticker Design</item>
        <item>Storyboard</item>
        <item>T-Shirts</item>
        <item>Tattoo Design</item>
        <item>Tekla Structures</item>
        <item>Templates</item>
        <item>Typography</item>
        <item>User Experience Design</item>
        <item>User Interface Design</item>
        <item>Vectorization</item>
        <item>Vehicle Signage</item>
        <item>Video Broadcasting</item>
        <item>Video Editing</item>
        <item>Video Production</item>
        <item>Video Services</item>
        <item>Videography</item>
        <item>VideoScribe</item>
        <item>Visual Arts</item>
        <item>Voice Talent</item>
        <item>Website Design</item>
        <item>Wireframes</item>
        <item>Word</item>
        <item>Yahoo! Store Design</item>
        <item>Zbrush</item>

    </string-array>
    <string-array name="sales">

        <item>Ad Planning &amp; Buying</item>
        <item>Advertising </item>
        <item>Affiliate Marketing</item>
        <item>Airbnb </item>
        <item>Brand Management</item>
        <item>Brand Marketing</item>
        <item>Branding</item>
        <item>Bulk Marketing</item>
        <item>Classifieds Posting</item>
        <item>Content Marketing</item>
        <item>Conversion Rate Optimisation</item>
        <item>CRM</item>
        <item>eBay</item>
        <item>Email Marketing</item>
        <item>Etsy</item>
        <item>Facebook Marketing</item>
        <item>Google Adsense</item>
        <item>Google Adwords</item>
        <item>Internet Marketing</item>
        <item>Internet Research</item>
        <item>Journalist</item>
        <item>Keyword Research</item>
        <item>Leads</item>
        <item>Mailchimp</item>
        <item>Mailwizz</item>
        <item>Market Research</item>
        <item>Marketing</item>
        <item>Marketing Strategy</item>
        <item>MLM</item>
        <item>Pardot</item>
        <item>Periscope</item>
        <item>PPC Marketing</item>
        <item>Sales</item>
        <item>Sales Promotion</item>
        <item>Search Engine Marketing</item>
        <item>Social Media Marketing</item>
        <item>Telemarketing</item>
        <item>Twitter Marketing</item>
        <item>Viral Marketing</item>
        <item>Visual Merchandising</item>
        <item>WooCommerce</item>

    </string-array>
    <string name="it">PROGRAMAÇÃO E TI</string>
    <string name="constru_cao">CONSTRUÇÃO CIVIL</string>
    <string name="audio_visual">AUDIOVISUAL</string>
    <string name="auto_moveis">AUTOMOVEIS</string>
    <string name="grastro_nomia">GASTRONOMIA</string>
    <string name="escri_ta">ESCRITA E TRADUÇÃO</string>
    <string name="projtext">projetos abertos esta semana</string>
    <string-array name="withdraw">
        <item>PayPal</item>
        <item>Stripe</item>
    </string-array>
    <string-array name="type_project">
        <item>POR TRABALHO FINALIZADO</item>
        <item>POR HORAS TRABALHADAS</item>
    </string-array>
    <string-array name="price_range">
        <item>Menos de R$ 50</item>
        <item>R$ 50-100</item>
        <item>R$ 50-100</item>
        <item>R$ 100-250</item>
        <item>R$ 250-500</item>
        <item>R$ 500-1000</item>
        <item>R$ 1000-3000</item>
        <item>Acima de R$3000</item>
    </string-array>
    <string-array name="hourly_price_range">
        <item>Nível Inicial: até R$ 15 / hr</item>
        <item>Intermediário: R$ 15 - 35 / hr</item>
        <item>Experiente: acima R$ 36 / hr</item>
    </string-array>
    <string-array name="duration_range">
        <item>1 - 2 semanas</item>
        <item>1 - 2 meses</item>
        <item>1 - 4 meses</item>
    </string-array>
    <string-array name="skilllist">
        <item>não selecionado </item>
        <item>DESIGN E MULTIMIDIA </item>
        <item>MAKETING E VENDAS</item>
        <item>PROGRAMAÇÃO E TI</item>
        <item>CONSTRUÇÃO CIVIL</item>
        <item>AUDIOVISUAL</item>
        <item>AUTOMOVEIS</item>
        <item>GASTRONOMIA</item>
        <item>ESCRITA E TRADUÇÃO</item>
        







    </string-array>
    <string-array name="create_it">
        <item>DESENVOLVIMENTO WEB</item>
        <item>WEB DESIGN</item>
        <item>E-COMMERCE</item>
        <item>WORDPRESS</item>
        <item>DESENVOLVIMENTO MOBILE </item>
        <item>APP PARA DESKTOP</item>
        <item>OUTROS</item>

    </string-array>
    <string-array name="create_design">
        <item>LOGO DESIGN</item>
        <item>WEB DESIGN</item>
        <item>BANERS</item>
        <item>ILUSTRAÇÕES</item>
        <item>CRIAÇÃO E EDIÇÃO DE VIDEO</item>
        <item>INFOGRAFIAS</item>
        <item>IMAGENS PARA REDES SOCIAIS</item>
        <item>DESING APLICATIVOS MOBILE</item>
        <item>IMAGENS CORPORATIVAS</item>
        <item>LANDING PAGE</item>
        <item>OUTROS</item>

    </string-array>
    <string-array name="create_writing">
        <item>ESCRITA DE ARTIGOS</item>
        <item>ESCRITA PARA SITES</item>
        <item>REVISÃO</item>
        <item>CONTEUDO PARA REDES SOCIAIS</item>
        <item>TRADUÇÃO</item>
        <item>OUTROS</item>

    </string-array>
    <string-array name="create_sales">
        <item>VENDAS</item>
        <item>GESTÃO COMUNITÁRIA</item>
        <item>PROPAGANDA NO GOOGLE, FACEBOOK</item>
        <item>E-MAIL MARKETING</item>
        <item>TELEVENDAS</item>
        <item>OUTROS</item>

    </string-array>
    <string-array name="create_admin">
        <item>ASSISTENTE VIRTUAL</item>
        <item>SUPORTE AO CLIENTE</item>
        <item>ENTRADA DE DADOS</item>
        <item>PESQUISA DE MERCADO</item>
        <item>TELEVENDAS</item>
        <item>OUTROS</item>

    </string-array>
    <string-array name="direito">
        <item>Trabalhista</item>
        <item>Corporativo</item>
        <item>Empresarial</item>
        <item>Patentes</item>
        <item>Familiar</item>
        <item>Outros</item>


    </string-array>
    <string-array name="create_finance">
        <item>COLETA DE DADOS</item>
        <item>TRABALHAR COM UM CRM</item>
        <item>GERENCIAMENTO DE PROJETOS</item>
        <item>RECRUTAMENTO</item>
        <item>PLANEJAMENTO ESTRATÉGICO</item>
        <item>CONTABILIDADE</item>
        <item>Outros</item>

    </string-array>
    <string-array name="create_engineer">
        <item>DESING INDUSTRIAL</item>
        <item>CAD </item>
        <item>MODELAGEM 3D </item>
        <item>Outros</item>

    </string-array>
</resources>