<?xml version="1.0" encoding="utf-8"?>

<luck.materialdesign.tabsnavigator.customViews.ScrimInsetsFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_activity_navigation_drawer_rootLayout"
    style="@style/ScrimInsetsLayout"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >

        <RelativeLayout
            android:id="@+id/layoutUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#21011a">
            <!--<ImageView-->
            <!--android:layout_width="128dp"-->
            <!--android:layout_height="128dp"-->
            <!--android:layout_marginTop="20dp"-->
            <!--android:elevation="5dp"-->
            <!--android:layout_centerHorizontal="true"-->
            <!--android:src="@drawable/icon"-->
            <!--android:id="@+id/iconUser"-->
            <!--/>-->

            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/iconUser"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/icon"
                app:border_color="#000000"
                app:border_width="2dp" />

            <TextView
                android:id="@+id/nameUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iconUser"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="7dp"
                android:elevation="5dp"
                android:text="Username"
                android:textColor="#e3e6e3"
                android:textSize="24dp" />
        </RelativeLayout>

        <View
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/divider"
            android:layout_below="@+id/layoutUser"
            android:layout_marginLeft = "15dp"
            android:layout_marginRight = "15dp"
            android:layout_width="match_parent"
            android:elevation="5dp"
            android:layout_height="@dimen/divider_height"
            android:background="#35B5E5"/>
        <!-- Drawer items -->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/divider"
            android:background="#000f18"
            android:clipToPadding="false"
            android:paddingBottom="@dimen/nav_drawer_vertical_spacing_listing"
            android:paddingTop="@dimen/nav_drawer_vertical_spacing_listing">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp">

                <RelativeLayout
                    android:id="@+id/framePanel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/iconPanel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="14dp"
                        android:src="@drawable/panelcontrol" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="15dp"
                        android:layout_toRightOf="@+id/iconPanel"
                        android:elevation="5dp"
                        android:text="@string/panel"
                        android:textColor="#e3e6e3"
                        android:textSize="15dp" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/framePerfil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/framePanel"
                    android:layout_marginTop="10dp">

                    <ImageView
                        android:id="@+id/iconPerfil"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:src="@drawable/perfil" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="14dp"
                        android:layout_toRightOf="@+id/iconPerfil"
                        android:elevation="5dp"
                        android:text="@string/profile"
                        android:textColor="#e3e6e3"
                        android:textSize="15dp" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/framePerfilFree"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/framePerfil"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="10dp">

                    <ImageView
                        android:id="@+id/iconPerfilFree"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:src="@drawable/subtitle" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="5dp"
                        android:layout_toRightOf="@+id/iconPerfilFree"
                        android:elevation="5dp"
                        android:text="@string/profilefree"
                        android:textColor="#e3e6e3"
                        android:textSize="14dp" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/framePerfilClient"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/framePerfilFree"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="10dp">

                    <ImageView
                        android:id="@+id/iconPerfilClient"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:src="@drawable/subtitle" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="5dp"
                        android:layout_toRightOf="@+id/iconPerfilClient"
                        android:elevation="5dp"
                        android:text="@string/profileclient"
                        android:textColor="#e3e6e3"
                        android:textSize="14dp" />
                </RelativeLayout>


                <RelativeLayout
                    android:id="@+id/frameNotification"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/framePerfilClient"
                    android:layout_marginTop="10dp">

                    <ImageView
                        android:id="@+id/iconNotification"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:src="@drawable/notification" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="15dp"
                        android:layout_toRightOf="@+id/iconNotification"
                        android:elevation="5dp"
                        android:text="@string/notification"
                        android:textColor="#e3e6e3"
                        android:textSize="14dp" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/frameMessage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/frameNotification"
                    android:layout_marginTop="10dp">

                    <ImageView
                        android:id="@+id/iconMessage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:src="@drawable/message" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="15dp"
                        android:layout_toRightOf="@+id/iconMessage"
                        android:elevation="5dp"
                        android:text="@string/messages"
                        android:textColor="#e3e6e3"
                        android:textSize="14dp" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/frameNewProj"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/frameMessage"
                    android:layout_marginTop="10dp">

                    <ImageView
                        android:id="@+id/iconNewProj"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:src="@drawable/createproj" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="15dp"
                        android:layout_toRightOf="@+id/iconNewProj"
                        android:elevation="5dp"
                        android:text="@string/newproj"
                        android:textColor="#e3e6e3"
                        android:textSize="14dp" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/frameSearch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/frameNewProj"
                    android:layout_marginTop="10dp">

                    <ImageView
                        android:id="@+id/iconSearch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:src="@drawable/search" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="15dp"
                        android:layout_toRightOf="@+id/iconSearch"
                        android:elevation="5dp"
                        android:text="@string/search"
                        android:textColor="#e3e6e3"
                        android:textSize="14dp" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/frameSearchFree"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/frameSearch"
                    android:layout_marginTop="10dp">

                    <ImageView
                        android:id="@+id/iconSearchFree"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:src="@drawable/search_freelancers" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="15dp"
                        android:layout_toRightOf="@+id/iconSearchFree"
                        android:elevation="5dp"
                        android:text="@string/searchFree"
                        android:textColor="#e3e6e3"
                        android:textSize="14dp" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/frameProj"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/frameSearchFree"
                    android:layout_marginTop="10dp">

                    <ImageView
                        android:id="@+id/iconProj"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:src="@drawable/projects" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="15dp"
                        android:layout_toRightOf="@+id/iconProj"
                        android:elevation="5dp"
                        android:text="@string/myproj"
                        android:textColor="#e3e6e3"
                        android:textSize="14dp" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/frameProjFree"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/frameProj"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="10dp">

                    <ImageView
                        android:id="@+id/iconProjFree"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:src="@drawable/subtitle" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="5dp"
                        android:layout_toRightOf="@+id/iconProjFree"
                        android:elevation="5dp"
                        android:text="@string/myprojfree"
                        android:textColor="#e3e6e3"
                        android:textSize="14dp" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/frameProjClient"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/frameProjFree"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="10dp">

                    <ImageView
                        android:id="@+id/iconProjClient"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:src="@drawable/subtitle" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="5dp"
                        android:layout_toRightOf="@+id/iconProjClient"
                        android:elevation="5dp"
                        android:text="@string/myprojclient"
                        android:textColor="#e3e6e3"
                        android:textSize="14dp" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/frameConfigure"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/frameProjClient"
                    android:layout_marginBottom="25dp"
                    android:layout_marginTop="10dp">

                    <ImageView
                        android:id="@+id/iconConfigure"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:src="@drawable/configure" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="15dp"
                        android:layout_toRightOf="@+id/iconConfigure"
                        android:elevation="5dp"
                        android:text="@string/configure"
                        android:textColor="#e3e6e3"
                        android:textSize="14dp" />
                </RelativeLayout>

            </RelativeLayout>


        </ScrollView>

    </RelativeLayout>

</luck.materialdesign.tabsnavigator.customViews.ScrimInsetsFrameLayout>